<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:gravity="center"
			  android:screenOrientation="landscape" tools:ignore="DiscouragedApi">

	<ImageView
			android:id="@+id/arrowImageView"
			android:layout_width="71dp"
			android:layout_height="64dp"
			android:layout_gravity="top|end"
			android:src="@drawable/exit"
			android:background="@android:color/transparent"
			android:contentDescription="@string/upgrade"/>
	<ImageButton
			android:id="@+id/playButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/play"

			android:contentDescription="@string/play_button_description"
			android:background="@android:color/transparent" tools:ignore="SpeakableTextPresentCheck"/>

	<ImageButton
			android:id="@+id/optionsButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/options"
			android:layout_marginTop="100px"
			android:contentDescription="@string/options_button_description"
			android:background="@android:color/transparent" tools:ignore="SpeakableTextPresentCheck"/>

</LinearLayout>
